--- a/index.html
+++ b/index.html
@@ -35,6 +35,23 @@
             <img src="images/sajjad.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width"></div>>
+        <img src="images/ariyan.jpg" alt="">
+        </div>
+        <div class="half-width"></div>>
+        <h1> big dream</h1>
+        <h2>become a web developer</h2>
+        <p> Lorem ipsum dolor sit amet, consectetur adipisicing
+            elit. Porro, accusamus magnam neque odio nobis veniam
+            atque eligendi error. Exercitationem
+            eius suscipit molestiae laudantium
+            ipsam nemo reprehenderit vitae
+            excepturi, minus nulla.</p>
+        <a class="link-button" target="_blank" href="http://google.com">Download Resume</a>
+        </div>
+
+    </section>
 
 </body>
 
